amd前端模块化解决方案

--- a/js_module_intro/amd/amd_html_require.html
+++ b/js_module_intro/amd/amd_html_require.html
@@ -10,12 +10,13 @@
     
 </body>
 </html>
-<script src="https://requirejs.org/docs/release/2.3.6/minified/require.js">
+<script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"> //导入RequireJs库函数
 </script>
 <script>
     require(['./amd_module.js'], function(mAlias) {
         console.log(mAlias.amd_sum(3, 4)); // 7
         console.log(mAlias.amd_multi(3, 4)); // 12
         console.log(mAlias.getModuleName()); // amd 模块定义
+        console.log(mAlias.getDependencyName());
     });
 </script>
