前端cmd模块化

--- a/js_module_intro/amd/amd_html_require.html
+++ b/js_module_intro/amd/amd_html_require.html
@@ -20,3 +20,6 @@
         console.log(mAlias.getDependencyName());
     });
 </script>
+<script src="./amd_module.js"> //导入不了 报错。define is not defined.
+
+</script>
